syntax = "proto3";

package rmon_service;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SendMessage (CustomerRequest) returns (ServiceReply) {}
}

// The request message containing the user's name.
message CustomerRequest {
    int64 ID            = 1;
    int64 package_speed = 2;
    int64 package_size  = 3;
}


enum ReturnValue{
    SUCCESS     = 0;
    VALUE_ERRPR = 1;
}

// The response message containing the greetings
message ServiceReply {
    ReturnValue  result_info = 1;
}


